fix: ajuste na organização de pastas (resources de test).